src/shared_lib/celestial.h

/* ---------- Global configuration ---------- */

/**
 * @brief Set the verbosity level of log printing.
 * @param new_value The new verbosity level (in `uint8_t`): 0 = none, 1 = info, 2 = debug.
 *                  The initial level is 0 (none) — logging is opt-in.
 * @returns `true` if the level was stored, `false` if `new_value` is out of range.
 */
CELESTIAL_API bool set_log_verbosity(uint8_t new_value);
/**
 * @brief Get the last-error message of the calling thread.
 * @returns A pointer to a thread-local C string, empty if there is no recorded error.
 *          Only the recording functions (`ut1_to_jd`, `ut1_to_jde`, `jde_to_ut1`,
 *          `moon_illumination`, `moon_position_angle`, `moon_phase_moments`,
 *          `local_apparent_sidereal_time`) write and clear the message; other functions
 *          neither set nor clear it, so the pointer always refers to the most recent
 *          recording call on this thread. It stays valid until the next recording call
 *          on the same thread.
 * @note #97 pilot, widened for the wasm consumer: it gets `valid = false` across an
 *       FFI boundary with no other way to learn why.
 */
CELESTIAL_API const char *last_error(void);
/* ---------- Julian Days ---------- */

typedef struct JulianDay {
  bool   valid; /* Indicates if the result is valid. */
  double value; /* The value. Either JD or JDE. */
} JulianDay;
/**
 * @brief Convert UT1 datetime to Julian Day Number (JD).
 * @param y The year.
 * @param m The month.
 * @param d The day.
 * @param fraction The fraction of the day. Must be in the range [0.0, 1.0).
 * @returns A `JulianDay` struct. JD is based on UT1.
 */
CELESTIAL_API JulianDay ut1_to_jd(int32_t y, uint32_t m, uint32_t d, double fraction);
/**
 * @brief Convert UT1 datetime to Julian Ephemeris Day Number (JDE).
 * @param y The year.
 * @param m The month.
 * @param d The day.
 * @param fraction The fraction of the day. Must be in the range [0.0, 1.0).
 * @returns A `JulianDay` struct. JDE is based on TT.
 */
CELESTIAL_API JulianDay ut1_to_jde(int32_t y, uint32_t m, uint32_t d, double fraction);
typedef struct UT1Time {
  bool     valid;    /* Indicates if the result is valid. */
  int32_t  year;     /* The year. */
  uint32_t month;    /* The month. */
  uint32_t day;      /* The day. */
  double   fraction; /* The fraction of the day, in the range [0.0, 1.0). */
} UT1Time;
/**
 * @brief Convert Julian Ephemeris Day Number (JDE) to UT1 datetime.
 * @param jde The julian ephemeris day number, which is based on TT.
 * @returns A `UT1Time` struct.
 */
CELESTIAL_API UT1Time jde_to_ut1(double jde);
/* ---------- Sun and Moon Apparent Geocentric Position ---------- */

typedef struct SunCoordinate {
  bool   valid; /* Indicates if the result is valid. */
  double lon;   /* The longitude. In degrees. */
  double lat;   /* The latitude. In degrees. */
  double r;     /* The radius. In AU. */
} SunCoordinate;
/**
 * @brief Calculate the apparent geocentric position of the Sun.
 * @param jde The julian ephemeris day number, which is based on TT.
 * @returns A `SunCoordinate` struct.
 */
CELESTIAL_API SunCoordinate sun_apparent_geocentric_coord(double jde);
typedef struct MoonCoordinate {
  bool   valid; /* Indicates if the result is valid. */
  double lon;   /* The longitude. In degrees. */
  double lat;   /* The latitude. In degrees. */
  double r;     /* The radius. In KM. */
} MoonCoordinate;
/**
 * @brief Calculate the apparent geocentric position of the Moon.
 * @param jde The julian ephemeris day number, which is based on TT.
 * @returns A `MoonCoordinate` struct.
 */
CELESTIAL_API MoonCoordinate moon_apparent_geocentric_coord(double jde);
typedef struct MoonIllumination {
  bool   valid;          /* Indicates if the result is valid. */
  double illumination;   /* The illuminated fraction of the Moon's disk, in [0, 1]. */
  double elongation_deg; /* The apparent longitude difference Moon − Sun, in degrees, in [0, 360). */
} MoonIllumination;
/**
 * @brief Compute the Moon's illuminated fraction k and elongation at a JDE
 *        (Meeus ch. 48: k from (48.2)+(48.3)+(48.1)).
 * @param jde The julian ephemeris day number, which is based on TT.
 * @returns A `MoonIllumination` struct. `elongation_deg` is the apparent ecliptic longitude
 *          difference that defines the phases: 0° new, 90° first quarter, 180° full,
 *          270° last quarter.
 */
CELESTIAL_API MoonIllumination moon_illumination(double jde);
typedef struct MoonPositionAngle {
  bool   valid;     /* Indicates if the result is valid. */
  double angle_deg; /* Position angle of the Moon's bright limb, in [0, 360). */
} MoonPositionAngle;
/**
 * @brief Compute the position angle of the Moon's bright limb at a JDE (Meeus ch. 48, (48.5)).
 * @param jde The julian ephemeris day number, which is based on TT.
 * @returns A `MoonPositionAngle` struct; `angle_deg` is measured eastward from the north
 *          point of the disk, in [0, 360).
 */
CELESTIAL_API MoonPositionAngle moon_position_angle(double jde);
/* ---------- Moon Phase Moments ---------- */

/**
 * @brief Find the moments of a given Moon phase in `year`; the total count goes to `root_count`,
 *        up to `slot_count` of them are written to `slots`.
 * @param year The Gregorian year.
 * @param phase_kind The phase kind: 0 = New Moon, 1 = First Quarter, 2 = Full Moon, 3 = Last Quarter.
 * @param root_count Where the total count of the roots is written. Must not be null.
 * @param slots The output slots, allocated and freed by the caller; may be null only when
 *              `slot_count` is 0.
 * @param slot_count The count of slots.
 * @returns How many slots are written.
 */
CELESTIAL_API uint32_t moon_phase_moments(int32_t year, uint8_t phase_kind, uint32_t *root_count, double *slots, uint32_t slot_count);
/* ---------- Delta T ---------- */

typedef struct DeltaT {
  bool   valid; /* Indicates if the result is valid. */
  double value; /* The value of delta T. */
} DeltaT;
/**
 * @brief Compute delta T of a given moment using algorithm 1.
 * @param year The year.
 * @returns A `DeltaT` struct.
 */
CELESTIAL_API DeltaT delta_t_algo1(double year);
/**
 * @brief Compute delta T of a given moment using algorithm 2.
 * @param year The year.
 * @returns A `DeltaT` struct.
 */
CELESTIAL_API DeltaT delta_t_algo2(double year);
/**
 * @brief Compute delta T of a given moment using algorithm 3.
 * @param year The year.
 * @returns A `DeltaT` struct.
 */
CELESTIAL_API DeltaT delta_t_algo3(double year);
/**
 * @brief Compute delta T of a given moment using algorithm 4.
 * @param year The year.
 * @returns A `DeltaT` struct.
 */
CELESTIAL_API DeltaT delta_t_algo4(double year);
/**
 * @brief Compute delta T of a given moment using algorithm 5.
 * @param year The year.
 * @returns A `DeltaT` struct.
 */
CELESTIAL_API DeltaT delta_t_algo5(double year);
/**
 * @brief Compute delta T of a given moment, using the best algorithm.
 * @param year The year.
 * @returns A `DeltaT` struct.
 */
CELESTIAL_API DeltaT delta_t(double year);