statistics/common.py

# CelestialCalendar Statistics:
#   Golden-dataset crawlers and evaluation notebooks for the CelestialCalendar C++ project.
#   No model training happens here (see AGENTS.md).
# 
# Author : Ningqi Wang (0xf3cd)
# Email  : nq.maigre@gmail.com
# Repo   : https://github.com/0xf3cd/celestial-calendar
# License: GNU General Public License v3.0
# 
# This software is distributed without any warranty.
# See <https://www.gnu.org/licenses/> for more details.

import sys
from enum import Enum
from pathlib import Path
from datetime import date, datetime, timedelta
from dataclasses import dataclass

import ctypes
from ctypes import (
  c_int32, c_uint32,  c_uint16, c_uint8, c_double, c_bool, c_char, c_char_p,
  POINTER, Structure
)

from typing import Optional, List


def dynamic_lib_ext() -> str:
  """Return the library extension for the current platform."""
  if sys.platform == "win32":
    return ".dll"
  elif sys.platform == "darwin":
    return ".dylib"
  elif sys.platform == "linux":
    return ".so"
  raise OSError(f"Unsupported platform: {sys.platform}")


def search_lib_path(folder: Path) -> Optional[Path]:
  """Search for the shared library in the given folder."""
  expected_ext = dynamic_lib_ext()

  if not folder.is_dir():
    return None

  # Prefer the unversioned name (the latest build's link): versioned outputs accumulate
  # in the build dir and directory order is arbitrary.
  for path in folder.iterdir():
    if path.is_file() and path.name == f"libcelestial_calendar{expected_ext}":
      return path

  for path in folder.iterdir():
    if not path.is_file():
      continue
    if expected_ext not in path.name:
      continue
    if "celestial_calendar" not in path.name:
      continue
    return path


# Define constants for paths.
PROJ_PATH        = Path(__file__).parent.parent
USNO_DATA_PATH   = Path(__file__).parent / "usno_data.txt"  # notebook-only; no test consumer (#168)
BINDINGS_PATH    = PROJ_PATH / "build" / "shared_lib"
LIB_PATH         = search_lib_path(BINDINGS_PATH)

assert PROJ_PATH.exists(),        f"Project path not found: {PROJ_PATH}"
assert USNO_DATA_PATH.exists(),   f"USNO data not found: {USNO_DATA_PATH}"
assert BINDINGS_PATH.exists(),    f"Bindings path not found: {BINDINGS_PATH}"

assert LIB_PATH is not None,      f"Shared library not found in {BINDINGS_PATH}"
assert LIB_PATH.exists(),         f"Shared library not found: {LIB_PATH}"


# Define the argument and return types of the C functions.
#
# Every export in `src/shared_lib/celestial.h` needs its `argtypes`/`restype` here: without them
# ctypes assumes `restype = c_int`, which reads a struct return as garbage (#85).
LIB = ctypes.CDLL(str(LIB_PATH))


#region Library-level

LIB.set_log_verbosity.argtypes = [c_uint8]
LIB.set_log_verbosity.restype = c_bool

LIB.last_error.argtypes = []
LIB.last_error.restype = c_char_p

#endregion


#region Delta T functions

class DeltaT(Structure):
  _fields_ = [
    ("valid", c_bool),
    ("value", c_double),
  ]

LIB.delta_t_algo1.argtypes = [c_double]
LIB.delta_t_algo1.restype = DeltaT

LIB.delta_t_algo2.argtypes = [c_double]
LIB.delta_t_algo2.restype = DeltaT

LIB.delta_t_algo3.argtypes = [c_double]
LIB.delta_t_algo3.restype = DeltaT

LIB.delta_t_algo4.argtypes = [c_double]
LIB.delta_t_algo4.restype = DeltaT

LIB.delta_t_algo5.argtypes = [c_double]
LIB.delta_t_algo5.restype = DeltaT


# Wrap C functions with Python functions, so that they can be called from Python.
def delta_t_algo1(year: float) -> float:
  result = LIB.delta_t_algo1(year)
  if not result.valid:
    raise ValueError("Error occurred in delta_t_algo1.")
  return result.value

def delta_t_algo2(year: float) -> float:
  result = LIB.delta_t_algo2(year)
  if not result.valid:
    raise ValueError("Error occurred in delta_t_algo2.")
  return result.value

def delta_t_algo3(year: float) -> float:
  result = LIB.delta_t_algo3(year)
  if not result.valid:
    raise ValueError("Error occurred in delta_t_algo3.")
  return result.value

def delta_t_algo4(year: float) -> float:
  result = LIB.delta_t_algo4(year)
  if not result.valid:
    raise ValueError("Error occurred in delta_t_algo4.")
  return result.value

def delta_t_algo5(year: float) -> float:
  result = LIB.delta_t_algo5(year)
  if not result.valid:
    raise ValueError("Error occurred in delta_t_algo5.")
  return result.value

LIB.delta_t.argtypes = [c_double]
LIB.delta_t.restype = DeltaT

def delta_t(year: float) -> float:
  """The library's default ΔT, currently algo5."""
  result = LIB.delta_t(year)
  if not result.valid:
    raise ValueError("Error occurred in delta_t.")
  return result.value

#endregion


#region Delta T and Julian Day

# Define the JulianDay struct
class _JulianDay(Structure):
  _fields_ = [
    ("valid", c_bool  ),
    ("value", c_double),
  ]

# Define the UT1Time struct
class _UT1Time(Structure):
  _fields_ = [
    ("valid", c_bool),
    ("year",  c_int32),
    ("month", c_uint32),
    ("day",   c_uint32),
    ("fraction", c_double),
  ]

# Define the function signatures
LIB.ut1_to_jd.argtypes = [c_int32, c_uint32, c_uint32, c_double]
LIB.ut1_to_jd.restype = _JulianDay

LIB.ut1_to_jde.argtypes = [c_int32, c_uint32, c_uint32, c_double]
LIB.ut1_to_jde.restype = _JulianDay

LIB.jde_to_ut1.argtypes = [c_double]
LIB.jde_to_ut1.restype = _UT1Time


# Wrap C functions with Python functions, so that they can be called from Python.
def ut1_to_jd(y: int, m: int, d: int, fraction: float) -> float:
  """
  @brief Convert UT1 datetime to Julian Day Number (JD).
  @param y The year.
  @param m The month.
  @param d The day.
  @param fraction The fraction of the day. Must be in the range [0.0, 1.0).
  @returns The Julian Day Number (JD).
  """
  jd = LIB.ut1_to_jd(y, m, d, fraction)

  if not jd.valid:
    raise ValueError("Error occurred in ut1_to_jd.")

  return jd.value

def ut1_to_jde(y: int, m: int, d: int, fraction: float) -> float:
  """
  @brief Convert UT1 datetime to Julian Ephemeris Day Number (JDE).
  @param y The year.
  @param m The month.
  @param d The day.
  @param fraction The fraction of the day. Must be in the range [0.0, 1.0).
  @returns The Julian Ephemeris Day Number (JDE).
  """
  jde = LIB.ut1_to_jde(y, m, d, fraction)

  if not jde.valid:
    raise ValueError("Error occurred in ut1_to_jde.")

  return jde.value


def jde_to_ut1(jde: float) -> datetime:
  """
  @brief Convert Julian Ephemeris Day Number (JDE) to UT1 datetime.
  @param jde The julian ephemeris day number, which is based on TT.
  @returns A `datetime` object representing the UT1 datetime.
  """
  ut1 = LIB.jde_to_ut1(jde)

  if not ut1.valid:
    raise ValueError("Error occurred in jde_to_ut1.")

  date = datetime(ut1.year, ut1.month, ut1.day)
  elapsed_microseconds = int(ut1.fraction * 86400 * 1000000)
  return date + timedelta(microseconds=elapsed_microseconds)

#endregion


#region Sun and Moon Coordinates

# Define the SunCoordinate struct
class _SunCoordinate(Structure):
  _fields_ = [
    ("valid", c_bool  ),
    ("lon",   c_double),
    ("lat",   c_double),
    ("r",     c_double),
  ]

# Define the MoonCoordinate struct
class _MoonCoordinate(Structure):
  _fields_ = [
    ("valid", c_bool  ),
    ("lon",   c_double),
    ("lat",   c_double),
    ("r",     c_double),
  ]

# Define the MoonIllumination struct
class _MoonIllumination(Structure):
  _fields_ = [
    ("valid",          c_bool  ),
    ("illumination",   c_double),
    ("elongation_deg", c_double),
  ]


LIB.sun_apparent_geocentric_coord.argtypes = [c_double]
LIB.sun_apparent_geocentric_coord.restype = _SunCoordinate

LIB.moon_apparent_geocentric_coord.argtypes = [c_double]
LIB.moon_apparent_geocentric_coord.restype = _MoonCoordinate

LIB.moon_illumination.argtypes = [c_double]
LIB.moon_illumination.restype = _MoonIllumination

class _MoonPositionAngle(Structure):
  _fields_ = [
    ("valid",    c_bool  ),
    ("angle_deg", c_double),
  ]

LIB.moon_position_angle.argtypes = [c_double]
LIB.moon_position_angle.restype = _MoonPositionAngle


@dataclass
class SunCoordinate:
  lon: float # In degrees
  lat: float # In degrees
  r:   float # In AU

def sun_apparent_geocentric_coord(jde: float) -> SunCoordinate:
  """
  @brief Compute the apparent geocentric coordinates of the Sun.
  @param jde The julian ephemeris day number, which is based on TT.
  @returns A `SunCoordinate` representing the apparent geocentric coordinates of the Sun.
  """
  coord = LIB.sun_apparent_geocentric_coord(jde)

  if not coord.valid:
    raise ValueError("Error occurred in sun_apparent_geocentric_coord.")

  return SunCoordinate(
    lon = coord.lon,
    lat = coord.lat,
    r   = coord.r,
  )


@dataclass
class MoonCoordinate:
  lon: float # In degrees
  lat: float # In degrees
  r:   float # In KM

def moon_apparent_geocentric_coord(jde: float) -> MoonCoordinate:
  """
  @brief Compute the apparent geocentric coordinates of the Moon.
  @param jde The julian ephemeris day number, which is based on TT.
  @returns A `MoonCoordinate` representing the apparent geocentric coordinates of the Moon.
  """
  coord = LIB.moon_apparent_geocentric_coord(jde)

  if not coord.valid:
    raise ValueError("Error occurred in moon_apparent_geocentric_coord.")

  return MoonCoordinate(
    lon = coord.lon,
    lat = coord.lat,
    r   = coord.r,
  )


@dataclass
class MoonIllumination:
  illumination:   float # In [0, 1]
  elongation_deg: float # In degrees, in [0, 360)

def moon_illumination(jde: float) -> MoonIllumination:
  """
  @brief Compute the Moon's illuminated fraction and elongation (Meeus ch. 48).
  @param jde The julian ephemeris day number, which is based on TT.
  @returns A `MoonIllumination` with the fraction in [0, 1] and the elongation in degrees.
  """
  result = LIB.moon_illumination(jde)

  if not result.valid:
    raise ValueError("Error occurred in moon_illumination.")

  return MoonIllumination(
    illumination   = result.illumination,
    elongation_deg = result.elongation_deg,
  )


@dataclass
class MoonPositionAngle:
  angle_deg: float # In [0, 360)

def moon_position_angle(jde: float) -> MoonPositionAngle:
  """
  @brief Compute the position angle of the Moon's bright limb (Meeus ch. 48, (48.5)).
  @param jde The julian ephemeris day number, which is based on TT.
  @returns A `MoonPositionAngle` with the angle in degrees, in [0, 360).
  """
  result = LIB.moon_position_angle(jde)

  if not result.valid:
    raise ValueError("Error occurred in moon_position_angle.")

  return MoonPositionAngle(angle_deg = result.angle_deg)


LIB.moon_phase_moments.argtypes = [c_int32, c_uint8, POINTER(c_uint32), POINTER(c_double), c_uint32]
LIB.moon_phase_moments.restype = c_uint32

class MoonPhaseKind(Enum):
  NEW_MOON = 0
  FIRST_QUARTER = 1
  FULL_MOON = 2
  LAST_QUARTER = 3

@dataclass
class MoonPhaseMoments:
  year: int
  phase: MoonPhaseKind
  jdes: List[float]
  moments: List[datetime]

def moon_phase_moments(year: int, phase: MoonPhaseKind) -> MoonPhaseMoments:
  """
  Find the Julian Ephemeris Days (JDEs) of the given Moon phase in a year.

  @param year The Gregorian year.
  @param phase The phase kind.
  @returns A `MoonPhaseMoments` with the JDEs and corresponding UT1 datetimes.
  """
  slot_count = 15  # 12 or 13 moments per year per phase.
  root_count = c_uint32(0)
  slots = (c_double * slot_count)()

  num_written = LIB.moon_phase_moments(year, phase.value, ctypes.byref(root_count), slots, slot_count)

  if num_written == 0:
    raise ValueError(f"Error occurred in moon_phase_moments for year {year}, phase {phase}.")

  if num_written != root_count.value:
    raise ValueError(
      f"moon_phase_moments wrote {num_written} of {root_count.value} roots for year {year}; "
      f"slot_count is {slot_count}."
    )

  jdes = [slots[i] for i in range(num_written)]
  moments = [jde_to_ut1(jde) for jde in jdes]
  return MoonPhaseMoments(year=year, phase=phase, jdes=jdes, moments=moments)

#endregion


#region Sidereal Time
